--- a/src/style.sass
+++ b/src/style.sass
@@ -25,8 +25,9 @@ ul.list-container
 	display: none
 li
 	list-style-type: none
-.task-done
+#task-done
 	background-color: grey
+	display: block
 .task
 	background-color: white
 title
