finished sorting by status and priority

--- a/src/style.sass
+++ b/src/style.sass
@@ -25,7 +25,7 @@ ul.list-container
 	display: none
 li
 	list-style-type: none
-#task-done
+.task-done
 	background-color: grey
 	display: block
 .task
